%% Companion identity
erDiagram
  CompanionDef {
    string id PK
  }
  Companion {
    string id PK
  }
  Character {
    string id PK
  }
  Soul {
    string id PK
  }
  Character ||--o| Soul : "relates to"
  Character ||--o| Companion : "relates to"
  Character ||--o{ CompanionDef : "relates to"
  Soul ||--o{ CompanionDef : "relates to"
  CompanionDef ||--o{ Companion : "relates to"
